--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "projects": {
+    "angular-cdk": "libs/angular-cdk",
     "official-site": "apps/official-site",
     "official-site-e2e": "apps/official-site-e2e"
   }
