--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1303.1",
     "@angular-devkit/build-angular": "~13.2.0",
+    "@angular-devkit/core": "^0.6.1 || >=7.0.0",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
     "@angular/language-service": "~13.2.0",
+    "@babel/core": ">=7.9.6 <8.0.0",
+    "@babel/preset-env": ">=7.0.0 <8.0.0",
     "@nrwl/cli": "13.9.5",
     "@nrwl/cypress": "13.9.5",
     "@nrwl/eslint-plugin-nx": "13.9.5",
@@ -47,6 +51,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
+    "babel-loader": ">=8.0.2 <9.0.0",
     "cypress": "^9.1.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
@@ -60,6 +65,8 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.1",
     "prettier": "^2.5.1",
+    "react": ">=16.13.1 <17.0.0 || >=17.0.1 <18.0.0",
+    "react-dom": ">=16.8.0 <17.0.0 || >=17.0.1 <18.0.0",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2",
     "webpack": "^5.64.0"
