--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@bespunky/rxjs": "^0.0.1-alpha.5",
     "@nrwl/angular": "13.9.5",
+    "date-fns": "^2.28.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.4.0",
+    "ts-key-enum": "^2.0.11",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -36,6 +40,7 @@
     "@angular/language-service": "~13.2.0",
     "@babel/core": ">=7.9.6 <8.0.0",
     "@babel/preset-env": ">=7.0.0 <8.0.0",
+    "@bespunky/typescript-utils": "^0.0.1-alpha.0",
     "@nrwl/cli": "13.9.5",
     "@nrwl/cypress": "13.9.5",
     "@nrwl/eslint-plugin-nx": "13.9.5",
@@ -47,6 +52,7 @@
     "@storybook/angular": "~6.4.12",
     "@storybook/builder-webpack5": "~6.4.12",
     "@storybook/manager-webpack5": "~6.4.12",
+    "@types/hammerjs": "^2.0.41",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
