✨ Generated a navigables/camera secondary entrypoint

--- a/libs/angular-cdk/project.json
+++ b/libs/angular-cdk/project.json
@@ -35,7 +35,9 @@
           "libs/angular-cdk/src/**/*.ts",
           "libs/angular-cdk/src/**/*.html",
           "libs/angular-cdk/navigables/**/*.ts",
-          "libs/angular-cdk/navigables/**/*.html"
+          "libs/angular-cdk/navigables/**/*.html",
+          "libs/angular-cdk/navigables/camera/**/*.ts",
+          "libs/angular-cdk/navigables/camera/**/*.html"
         ]
       }
     },
