--- a/libs/angular-cdk/project.json
+++ b/libs/angular-cdk/project.json
@@ -43,7 +43,9 @@
           "libs/angular-cdk/reactive-input/**/*.ts",
           "libs/angular-cdk/reactive-input/**/*.html",
           "libs/angular-cdk/reactive-input/keyboard/**/*.ts",
-          "libs/angular-cdk/reactive-input/keyboard/**/*.html"
+          "libs/angular-cdk/reactive-input/keyboard/**/*.html",
+          "libs/angular-cdk/reactive-input/mouse/**/*.ts",
+          "libs/angular-cdk/reactive-input/mouse/**/*.html"
         ]
       }
     },
