--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,6 +33,9 @@
       ],
       "@bespunky/angular-cdk/reactive-input/mouse": [
         "libs/angular-cdk/reactive-input/mouse/src/index.ts"
+      ],
+      "@bespunky/angular-cdk/reactive-input/touch": [
+        "libs/angular-cdk/reactive-input/touch/src/index.ts"
       ]
     }
   },
