--- a/libs/angular-cdk/project.json
+++ b/libs/angular-cdk/project.json
@@ -47,7 +47,9 @@
           "libs/angular-cdk/reactive-input/mouse/**/*.ts",
           "libs/angular-cdk/reactive-input/mouse/**/*.html",
           "libs/angular-cdk/reactive-input/touch/**/*.ts",
-          "libs/angular-cdk/reactive-input/touch/**/*.html"
+          "libs/angular-cdk/reactive-input/touch/**/*.html",
+          "libs/angular-cdk/reactive-input/shared/**/*.ts",
+          "libs/angular-cdk/reactive-input/shared/**/*.html"
         ]
       }
     },
