--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,9 @@
       "@bespunky/angular-cdk/reactive-input/mouse": [
         "libs/angular-cdk/reactive-input/mouse/src/index.ts"
       ],
+      "@bespunky/angular-cdk/reactive-input/shared": [
+        "libs/angular-cdk/reactive-input/shared/src/index.ts"
+      ],
       "@bespunky/angular-cdk/reactive-input/touch": [
         "libs/angular-cdk/reactive-input/touch/src/index.ts"
       ]
