--- a/libs/angular-cdk/project.json
+++ b/libs/angular-cdk/project.json
@@ -61,7 +61,9 @@
           "libs/angular-cdk/timeline/abstraction/items/**/*.ts",
           "libs/angular-cdk/timeline/abstraction/items/**/*.html",
           "libs/angular-cdk/timeline/shared/**/*.ts",
-          "libs/angular-cdk/timeline/shared/**/*.html"
+          "libs/angular-cdk/timeline/shared/**/*.html",
+          "libs/angular-cdk/timeline/well-known/**/*.ts",
+          "libs/angular-cdk/timeline/well-known/**/*.html"
         ]
       }
     },
