--- a/libs/angular-cdk/package.json
+++ b/libs/angular-cdk/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^13.2.0",
     "@angular/core": "^13.2.0",
     "@bespunky/rxjs": ">=0.0.1-alpha.5",
+    "@bespunky/angular-zen": ">=4.0.0-alpha.0",
     "date-fns": "^2.21.1",
     "hammerjs": "^2.0.8",
     "ts-key-enum": "^2.0.7"
