--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@bespunky/angular-zen": "^4.0.0-alpha.0",
     "@bespunky/rxjs": "^0.0.1-alpha.5",
     "@nrwl/angular": "13.9.5",
     "date-fns": "^2.28.0",
     "hammerjs": "^2.0.8",
+    "lodash-es": "4.17.21",
     "rxjs": "~7.4.0",
     "ts-key-enum": "^2.0.11",
     "tslib": "^2.0.0",
