--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@bespunky/angular-zen": "^4.0.0-alpha.0",
-    "@bespunky/rxjs": "^0.0.1-alpha.6",
+    "@bespunky/rxjs": "0.0.1-alpha.7",
     "@nrwl/angular": "13.9.5",
     "date-fns": "^2.28.0",
     "hammerjs": "^2.0.8",
