--- a/package.json
+++ b/package.json
@@ -11,45 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/animations": "13.3.2",
+    "@angular/common": "13.3.2",
+    "@angular/compiler": "13.3.2",
+    "@angular/core": "13.3.2",
+    "@angular/forms": "13.3.2",
+    "@angular/platform-browser": "13.3.2",
+    "@angular/platform-browser-dynamic": "13.3.2",
+    "@angular/router": "13.3.2",
     "@bespunky/angular-zen": "^4.0.0-alpha.0",
     "@bespunky/rxjs": "0.0.1-alpha.7",
-    "@nrwl/angular": "13.9.5",
+    "@nrwl/angular": "13.10.1",
     "date-fns": "^2.28.0",
     "hammerjs": "^2.0.8",
     "lodash-es": "4.17.21",
     "rxjs": "^7.5.5",
     "ts-key-enum": "^2.0.11",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@storybook/core-server": "6.4.21"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1303.1",
-    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular-devkit/build-angular": "13.3.2",
     "@angular-devkit/core": "^0.6.1 || >=7.0.0",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
+    "@angular/cli": "13.3.2",
+    "@angular/compiler-cli": "13.3.2",
+    "@angular/language-service": "13.3.2",
     "@babel/core": ">=7.9.6 <8.0.0",
     "@babel/preset-env": ">=7.0.0 <8.0.0",
     "@bespunky/typescript-utils": "^0.0.1-alpha.0",
     "@nrwl/cli": "13.9.5",
-    "@nrwl/cypress": "13.9.5",
-    "@nrwl/eslint-plugin-nx": "13.9.5",
-    "@nrwl/jest": "13.9.5",
-    "@nrwl/linter": "13.9.5",
-    "@nrwl/storybook": "13.9.5",
-    "@nrwl/workspace": "13.9.5",
+    "@nrwl/cypress": "13.10.1",
+    "@nrwl/eslint-plugin-nx": "13.10.1",
+    "@nrwl/jest": "13.10.1",
+    "@nrwl/linter": "13.10.1",
+    "@nrwl/storybook": "13.10.1",
+    "@nrwl/workspace": "13.10.1",
     "@storybook/addon-essentials": "~6.4.12",
     "@storybook/angular": "~6.4.12",
     "@storybook/builder-webpack5": "~6.4.12",
@@ -57,17 +58,17 @@
     "@types/hammerjs": "^2.0.41",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "babel-loader": ">=8.0.2 <9.0.0",
     "cypress": "^9.1.0",
-    "eslint": "~8.7.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "11.1.1",
-    "ng-packagr": "^13.0.0",
-    "nx": "13.9.5",
+    "ng-packagr": "13.3.0",
+    "nx": "13.10.1",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
@@ -76,7 +77,8 @@
     "react": ">=16.13.1 <17.0.0 || >=17.0.1 <18.0.0",
     "react-dom": ">=16.8.0 <17.0.0 || >=17.0.1 <18.0.0",
     "ts-jest": "27.0.5",
-    "typescript": "~4.5.2",
+    "typescript": "4.6.3",
     "webpack": "^5.64.0"
   }
 }
+
