--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@bespunky/angular-zen": "^4.0.0-alpha.0",
     "@bespunky/rxjs": "0.0.1-alpha.7",
     "@nrwl/angular": "13.10.1",
+    "@storybook/core-server": "6.4.21",
     "date-fns": "^2.28.0",
     "hammerjs": "^2.0.8",
     "lodash-es": "4.17.21",
     "rxjs": "^7.5.5",
     "ts-key-enum": "^2.0.11",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4",
-    "@storybook/core-server": "6.4.21"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1303.1",
@@ -49,6 +49,7 @@
     "@nrwl/eslint-plugin-nx": "13.10.1",
     "@nrwl/jest": "13.10.1",
     "@nrwl/linter": "13.10.1",
+    "@nrwl/nx-cloud": "^13.2.2",
     "@nrwl/storybook": "13.10.1",
     "@nrwl/workspace": "13.10.1",
     "@storybook/addon-essentials": "~6.4.12",
@@ -81,4 +82,3 @@
     "webpack": "^5.64.0"
   }
 }
-
